# dummyclient

./: .gitignore  CMakeLists.txt  README.md  dummy.openapi.json  flake.nix  generate-client.sh
nix/: cpprestsdk.nix
src/: main.c
